--- a/www/includes/manasik/pelaksanaan_manasik/tab_produk_dikembalikan/index-tab-dikembalikan.html
+++ b/www/includes/manasik/pelaksanaan_manasik/tab_produk_dikembalikan/index-tab-dikembalikan.html
@@ -60,17 +60,27 @@
 <div class="breadcrumb-pusatriyal">
   <span class="active">Produk yang dikembalikan</span>
 </div>
-<div class="card maincard">
-  
+
+<div class="form-group m-3" id="div-filter">
+  <div class="border-bottom border-bottom-1">
+    <input type="text" class="form-control-plaintext" name="" id="input-filter-pelaksanaan" placeholder="Cari Data" 
+    >
+  </div>
+
+</div>
+
+<div class="card maincard" id="list-for-filter">
 </div>
 
   <rawcontent class='datalist'>
-    <div class="card-body">
-      <h5 class="card-title">Card title</h4>
-      <h6 class="card-subtitle" style="margin-bottom: 1mm">Some example text. Some example text.</h6>
-      <a href="#" class="badge badge-primary card-info-first">Card link</a>
-      <a href="#" class="badge card-info-second">Another link</a>
+    <div class="card-filter">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <h6 class="card-subtitle" style="margin-bottom: 1mm">Some example text. Some example text.</h6>
+        <a href="#" class="badge badge-info card-info-first">Card link</a>
+        <a href="#" class="badge card-info-second">Another link</a>
+      </div>
     </div>
   </rawcontent>
-  <script type="text/javascript" src="includes/manasik/pelaksanaan_manasik/tab_produk_dikembalikan/js/index-tab-dikembalikan-commander.js"></script>
+  <script type="text/javascript" src="includes/manasik/pelaksanaan_manasik/tab_pelaksanaan_manasik/js/index-tab-pelaksanaan-commander.js"></script>
 </div>
