--- a/www/includes/manasik/penjualan_manasik/form-penjualan-manasik.html
+++ b/www/includes/manasik/penjualan_manasik/form-penjualan-manasik.html
@@ -110,54 +110,82 @@
   </button>
 </div>
 <div class="breadcrumb-pusatriyal">
-  <span class="active">Form Pelaksanaan Kegiatan </span>
+  <span class="active">Form Penjualan Kegiatan </span>
 </div>
 
-<form id="pelaksanaan-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
+
+<form id="pelaksanaan-form" class="form" action="" method="post" autocomplete="off">
     <input type="hidden" name="_token" id="_token">
-    <input type="hidden" name="m_comp_id" id="m_comp_id">
+    <input type="hidden" name="session" id="session">
+    <input type="hidden" name="marketing" id="marketing">
 
     <div class="form-group">
-        <label for="customer" class="label-for">Kode Pelaksanaan</label><br>
+      <label class="label-for">Kode Pelaksanaan</label>
+      <div class="border-bottom border-bottom-1">
+        <input type="text" class="form-control" readonly="" id="kodepelaksanaan" name="">
+      </div>
+    </div>
+
+    <div class="form-group">
+        <label for="customer" class="label-for">Nama Pembeli</label><br>
         <div class="border-bottom border-bottom-1">
-          <select id="idplan" name="idplan" class="form-control-plaintext">
+          <select id="idcus" name="idcus" class="form-control-plaintext">
             
           </select>
         </div>
     </div>
 
     <div class="form-group">
-      <label class="label-for" >Petugas Kegiatan</label><br>
-      <div class="border-bottom border-bottom-1">
-        <select name="employe1" id="employe1" class="form-control-plaintext"></select>
-      </div>
+      <label class="label-for" >Nomor HP Pembeli</label><br>
+      
+      <input type="text" class="form-control" readonly="" name="nohp" id="nohp">
+      
     </div>
+
     <div class="form-group">
-      <div class="border-bottom border-bottom-1">
-        <select name="employe2" id="employe2" class="form-control-plaintext"></select>
-      </div>
+      <label class="label-for" >Alamat Pembeli</label><br>
+      
+      <textarea class="form-control" readonly="" name="alamat" id="alamat"></textarea>
+      
     </div>
+
     <div class="form-group">
-      <div class="border-bottom border-bottom-1">
-        <select name="employe3" id="employe3" class="form-control-plaintext"></select>
-      </div>
+      <label class="label-for" >Petugas</label><br>
+      <input type="text" class="form-control" readonly="" name="" id="namapetugas">
+      <input type="hidden" name="idpetugas" id="idpetugas">
+      
     </div>
+
 </form>
-    <fieldset class="mb-3">
-      <h3>Produk yang dibawa</h3>
+    <fieldset class="m-3">
+      <h3>Barang Pembelian</h3>
 
       <div class="form-group">
-        <label>Produk dibawa</label>
+        <label>Nama Barang</label>
         <div class="border-bottom border-bottom-1">
-          <select name="produk" id="produk" class="form-control-plaintext"></select>
+          <select name="barang" id="barang" class="form-control-plaintext"></select>
         </div>
       </div>
 
+      <div class="form-group">
+        <label>Harga Barang</label>
+        
+        <input type="text" class="form-control" name="" id="hargaenter" readonly="">
+        
+      </div>
+
 
       <div class="form-group">
-        <label>Stock</label>
+        <label>Stok Barang</label>
         
         <input type="text" class="form-control" name="" id="stockenter" readonly="">
+        
+      </div>
+
+      <div class="form-group">
+        <label>Stok Antri</label>
+        
+        <input type="text" class="form-control" name="" id="antrienter" readonly="">
         
       </div>
 
@@ -171,7 +199,7 @@
       <button class="btn btn-primary btn-block" type="button" id="btn-tambah">Tambah dilist</button>
 
     </fieldset>
-<form id="list-pelaksanaan-form">
+<form id="list-pelaksanaan-form" style="margin-bottom: 25mm">
     <div id="div-produk-dibawa">
 
     </div>
@@ -217,7 +245,7 @@
     
 </form>
 
-    <script type="text/javascript" src="includes/manasik/pelaksanaan_manasik/js/form-pelaksanaan-commander.js"></script>
+    <script type="text/javascript" src="includes/manasik/penjualan_manasik/js/form-penjualan-manasik-commander.js"></script>
   <script type="text/javascript">
     // display_pembayaran_json(global_pembayaran_json);
   </script>
