--- a/www/includes/distribusi/pencatatan-retail/preview-tracking.html
+++ b/www/includes/distribusi/pencatatan-retail/preview-tracking.html
@@ -1,120 +1,90 @@
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
-   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
-   crossorigin=""/>
-<div class="subcontent" style="">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+
 <style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-    }
 
-    .title-edit
-    {
-        margin-top: 60px;
-        margin-left: 20px;
-        margin-bottom: 30px;
-        width: 70%;
-        border: none;
-        color: #14c56d;
-    }
+#mapid { height: 100%; margin-top: 20px; }
 
-    .btnSubmit
-    {
-        border-radius: 50mm;
-        margin-top: 8mm;
-        margin-bottom: 50px;
-        padding: 3mm 10mm;
-        border: none;
-        cursor: pointer;
-        background: #42ec98;
-        color: #FFFFFF;
-        font-weight: bold;
-        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-    }
-    .border-bottom-1 {
-        border-bottom: 2px solid #42ec98 !important;
-    }
-    .label-for
-    {
-      font-weight: bold;
-      color: #646464ff;
-      margin-bottom: 0px;
-    }
-    .listx
-    {
-      font-weight: bold;
-    }
-
-    .card-body {
-      border-bottom:1px solid #e7e7e7;
-    }/*
-    .card {
-      margin-left: 4mm;
-      margin-right: 4mm;
-      margin-bottom: 10mm;
-    }
-    */
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-    }
-    #login .container #login-row #login-column #login-box {
-      margin-top: 60px;
-      max-width: 600px;
-      height: 320px;
-    }
-    #login .container #login-row #login-column #login-box #login-form {
-      padding: 26px;
-      margin-bottom: 35mm;
-    }
-    #login .container #login-row #login-column #login-box #login-form #register-link {
-      margin-top: -85px;
-    }
-
-
-    .btnSubmit
-    {
-        border-radius: 50mm;
-        margin-top: 8mm;
-        margin-bottom: 50px;
-        padding: 3mm 10mm;
-        border: none;
-        cursor: pointer;
-        background: #42ec98;
-        color: #FFFFFF;
-        font-weight: bold;
-        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-    }
-    .border-bottom-1 {
-        border-bottom: 2px solid #42ec98 !important;
-    }
-    .label-for
-    {
-      font-weight: bold;
-      color: #646464ff;
-      margin-bottom: 0px;
-    }
-    form {
-      padding-left: 5mm;
-      padding-right: 5mm;
-    }
 </style>
 
+</head>
+
+<body>
 <div class="pusatriyal-submit btn-group">
   		<button type="button" class="btn btn-success" id="selesai" onclick="selesai()">Selesai</button>
 </div>
-<div class="breadcrumb-pusatriyal">
-  <span class="active">Preview Tracking</span>
-</div>
-<form id="opname-form" class="form" action="" method="post" autocomplete="off" style="margin-bottom: 25mm">
-  <div id="mapid"></div>
-</form>
-  
-  <script type="text/javascript">
+<div id="mapid"></div>
+<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 
-  var mymap = L.map('mapid');
-  var marker = L.marker([51.5, -0.09]).addTo(mymap);
-  </script>
-</div>
+<script>
+$(document).ready(function(){
+  getdata();
+});
+
+cekdata();
+
+function cekdata(){
+  setInterval(function () {
+    getdata();
+  }, 5000);
+}
+
+function getdata(){
+  $.ajax({
+    type: 'get',
+    data: {sr_id, petugas},
+    dataType: 'json',
+    url: url('api/getmap'),
+    success : function(response){
+      count = response.length;
+
+      // polylinepoint = [];
+      //
+      // for (i = 0; i < response.length; i++) {
+      //    polylinepoint.push([response[i].rdt_latitude, response[i].rdt_longitude]);
+      // }
+      // console.log(polylinepoint.length);
+
+      getmap(response, count);
+    }
+  });
+}
+
+function getmap(response, count){
+  var map = L.map('mapid').setView([response[count - 1].rdt_latitude, response[count - 1].rdt_longitude], 13);
+  L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+  }).addTo(map);
+
+  // var polyline = L.polyline(polylinepoint).addTo(map);
+  // var polyline = L.polyline(polylinepoint, {color: 'red'}).addTo(map);
+  //
+  // map.fitBounds(polyline.getBounds());
+  var marker = L.marker([response[0].rdt_latitude, response[0].rdt_longitude],
+       {
+         title: 'Lokasi Awal'}            // Adjust the opacity
+       )
+       .addTo(map);
+
+  marker.bindPopup("Lokasi Awal").openPopup();
+  // L.marker(response[count - 1].rdt_latitude, response[count - 1].rdt_longitude).addTo(map);
+
+  var stuSplit = L.latLng(response[count - 1].rdt_latitude, response[count - 1].rdt_longitude);
+  var myMarker = L.circleMarker(stuSplit,
+    { title: 'unselected' })
+        .addTo(map);
+}
+
+function selesai(){
+  stop(sr_id);
+  Routing.load_page('includes/distribusi/pencatatan-retail/pencatatan-retail.html');
+}
+
+</script>
+
+</body>
+
+</html>
