--- a/platforms/android/app/src/main/assets/www/includes/distribusi/menu-distribusi-corporate.html
+++ b/platforms/android/app/src/main/assets/www/includes/distribusi/menu-distribusi-corporate.html
@@ -51,7 +51,7 @@
 <div class="list-group list-group-flush">
   <a pusatriyal-role='routing' style="cursor:pointer;" pusatriyal-target='includes/distribusi/pencatatan-agen/pencatatan-agen.html' class="list-group-item list-group-item-action listx">Pencatatan & Pengelolaan Agen</a>
   <a pusatriyal-role='routing' style="cursor:pointer;" pusatriyal-target='includes/distribusi/penjualan-corporate/penjualan-corporate.html' class="list-group-item list-group-item-action listx">Penjualan Corporate</a>
-  <a pusatriyal-role='routing' style="cursor:pointer;" pusatriyal-target='includes/distribusi/penjualan-corporate/pencatatan-corporate.html' class="list-group-item list-group-item-action listx">Pencatatan Corporate</a>
+  <a pusatriyal-role='routing' style="cursor:pointer;" pusatriyal-target='includes/distribusi/penjualan-corporate/pencatatan-corporate.html' class="list-group-item list-group-item-action listx">Jadwal Pengantaran Corporate</a>
 </div>
 
 </div>
