--- a/www/includes/manasik/penjualan_manasik/tab_penjualan/preview-penjualan.html
+++ b/www/includes/manasik/penjualan_manasik/tab_penjualan/preview-penjualan.html
@@ -112,10 +112,13 @@
 <input type="hidden" name="_token" id="_token">
 <input type="hidden" name="sm_id" id="sm_id">
     <div class="w-100 text-center mb-3">
+      <button class="btn btn-info mb-3" id="btn-pdf" type="button"><i class="fa fa-file-pdf-o"></i> Print ke PDF</button>
       <h3>No. Antrian</h3>
-      <span class="badge-antrian">
-          ?
-      </span>
+      <div id="get-antrian">
+        <span class="badge-antrian">
+            ?
+        </span>
+      </div>
     </div>
     <label class="badge badge-status"></label>
     <div class="form-group form-tagihan">
