--- a/www/includes/manasik/penjualan_manasik/form-penjualan-manasik.html
+++ b/www/includes/manasik/penjualan_manasik/form-penjualan-manasik.html
@@ -294,6 +294,7 @@
 
       </div>
       <div class="modal-footer">
+        <button class="btn btn-info" id="btn-pdf" type="button"><i class="fa fa-file-pdf-o"></i> Print PDF</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
